# maveric

./: Cargo.toml  lcov.info  readme.md  tasks.md
benches/: my_benchmark.rs  ordered_benchmark.rs  unordered_benchmark.rs
examples/: change_watching.rs  counter.rs  graph.rs  menu.rs  multiple_resources.rs  number_buttons.rs  two_systems.rs
macro/: Cargo.toml  cargo.toml
macro/src/: lib.rs
src/: allocator.rs  cached.rs  child_commands.rs  child_deletion_policy.rs  child_key.rs  child_tuple.rs  commands.rs  component_commands.rs  components.rs  concrete_component_commands.rs  creation_commands.rs  deleter.rs  desired_transform.rs  either.rs  has_changed.rs  has_child.rs  has_detect_changes.rs  has_item_changed.rs  helpers.rs  hierarchy_node.rs  hierarchy_root.rs  into_components.rs  lib.rs  maveric_context.rs  memo.rs  node.rs  node_args.rs  node_commands.rs  node_context.rs  node_data.rs  ordered_child_commands.rs  plugin.rs  root.rs  root_commands.rs  scheduled_change.rs  scheduled_for_deletion.rs  set_children_commands.rs  set_component_commands.rs  set_components_commands.rs  set_event.rs  (+8 more)
src/transition/: aspect.rs  deletion_path_maker.rs  ease.rs  lens.rs  lenses.rs  mod.rs  next_step.rs  path.rs  plugin.rs  speed.rs  step.rs  text_lenses.rs  transform.rs  transition_builder.rs  transition_value.rs  transitioned_value.rs  tweenable.rs  ui_lenses.rs  velocity.rs  with.rs
src/widgets/: button_node.rs  carousel.rs  either.rs  image_button_node.rs  image_node.rs  mod.rs  multi_text2d_node.rs  sprite_node.rs  static_components.rs  text2d_node.rs  text_button_node.rs  text_node.rs
