[package]
name = "maveric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", default-features = false}



[dev-dependencies]
bevy = {version = "0.11.3", default-features = false, features = ["bevy_render", "bevy_ui", "bevy_winit", "png"]}
strum = { version = "0.25.0", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }


[features]
widgets = ["bevy_render", "bevy_ui"]
bevy_render = ["bevy/bevy_render"]
bevy_ui = ["bevy/bevy_ui"]


[[example]]
name = "menu"
path = "examples/menu.rs"
required-features = ["widgets"]

[[example]]
name = "counter"
path = "examples/counter.rs"
required-features = ["widgets"]

[[example]]
name = "two_systems"
path = "examples/two_systems.rs"
required-features = ["widgets"]

[[example]]
name = "number_buttons"
path = "examples/number_buttons.rs"
required-features = ["widgets"]

[[example]]
name = "graph"
path = "examples/graph.rs"
required-features = ["widgets"]


[[bench]]
name = "unordered_benchmark"
harness = false

[[bench]]
name = "ordered_benchmark"
harness = false