[package]
name = "maveric"
version = "0.14.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 = "0.2"
bevy = { version = "0.14", default-features = false }
bumpalo = { version = "3", features = ["allocator-api2"], optional = true }
maveric-macro = { path = "./macro", version = "=0.14.0", optional = true }
simple-easing = "1.0.1"


[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_ui",
    "bevy_winit",
    "png",
] }
strum = { version = "0.26", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
maveric-macro = { path = "./macro", version = "=0.14.0" }

[features]
widgets = ["bevy_text"]
bevy_text = ["bevy/bevy_text"]
bevy_ui = ["bevy_text", "bevy/bevy_ui"]
derive = ["maveric-macro"]
bumpalo = ["dep:bumpalo"]
tracing = []
default = ["widgets", "derive", "bumpalo"]

[[example]]
name = "menu"
path = "examples/menu.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "counter"
path = "examples/counter.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "multiple_resources"
path = "examples/multiple_resources.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "two_systems"
path = "examples/two_systems.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "number_buttons"
path = "examples/number_buttons.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "graph"
path = "examples/graph.rs"
required-features = ["widgets", "derive", "bevy_ui"]

[[example]]
name = "change_watching"
path = "examples/change_watching.rs"
required-features = ["widgets", "derive", "bevy_ui"]


[[bench]]
name = "unordered_benchmark"
harness = false
required-features = ["derive"]

[[bench]]
name = "ordered_benchmark"
harness = false
required-features = ["derive"]
