[package]
name = "maveric-macro"
description = "Proc macro for `maveric`. Do not use directly."
readme = "../README.md"
version = "0.14.0"
edition = "2021"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["proc-macro", "parsing", "printing", "full", "derive"], default-features = false }
quote = "1"